--- a/unit_3/index.html
+++ b/unit_3/index.html
@@ -6,6 +6,12 @@
 </head>
 <body>
 	<h1>World Wanderer: A Series</h1>
+		
+
+	<h2 id="mainMenu"> <a href="#">Africa</a>       <a href="#">Europe</a>       <a href="#">North America</a>       <a href="#">South America</a>
+	</h2>	
+
+		<br>
 		<p id="slogan"> Oh the places we go...</p>
 	<br>
 
