Update test stripe check out.html

--- a/test stripe check out.html
+++ b/test stripe check out.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html!>
 <html>
+  <header>
 <!-- Load Stripe.js on your website. -->
 <script src="https://js.stripe.com/v3"></script>
 
@@ -44,4 +45,5 @@
   });
 })();
 </script>
+  </header>
 </html>
