--- a/DAD BIRTHDAY GIFT/index.html
+++ b/DAD BIRTHDAY GIFT/index.html
@@ -13,8 +13,8 @@
 		<h1> Crandall Guide To Eating Out</h1>
 		<nav>
 			<a href= "#">Full Index</a>
-			<a href= "#">Seamless</a>
-			<a href= "#">Grubhub</a>
+			<a href= "https://www.seamless.com">Seamless</a>
+			<a href= "https://www.grubhub.com">Grubhub</a>
 			<a href= "#">Further Reading</a>
 		</nav>
 	</header>
