--- a/DAD BIRTHDAY GIFT/index.html
+++ b/DAD BIRTHDAY GIFT/index.html
@@ -12,10 +12,10 @@
 	<header>
 		<h1> Crandall Guide To Eating Out</h1>
 		<nav>
-			<a href= "#">Full Index</a>
-			<a href= "https://www.seamless.com">Seamless</a>
-			<a href= "https://www.grubhub.com">Grubhub</a>
-			<a href= "#">Further Reading</a>
+			<a href= "#" target="_blank">Full Index</a>
+			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
+			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
+			<a href= "#" target="_blank">Further Reading</a>
 		</nav>
 	</header>
 
