--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -12,10 +12,10 @@
 	<header>
 		<h1> Crandall Guide To Eating Out</h1>
 		<nav>
-			<a href= "page_1.html" target="_blank">Full Index</a>
+			<a href= "full_list.html" target="_blank">Full Index</a>
 			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
 			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
-			<a href= "page_2.html" target="_blank">Further Reading</a>
+			<a href= "further_reading.html" target="_blank">Further Reading</a>
 		</nav>
 	</header>
 
