--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -28,20 +28,8 @@
 		
 
 				<ul>
-					<li>Spain</li>
-					<li>France</li>
-					<li>Canada</li>
-					<li>Morocco</li>
-					<li>Germany</li>
-					<li>Argentina</li>
-					<li>Ireland</li>
-					<li>England</li>
-					<li>Netherlands</li>
-					<li>Cuba</li>
-					<li>Aruba</li>
-					<li>Greece</li>
-					<li>Italy</li>
-					<li>Unites States</li>
+					<a href= "american_fare.html" target="_blank">AMERICAN FARE</a>
+					<a href= "chinese.html" target="_blank"> CHINESE</a>
 				</ul>
 		</aside>
 	</div>
