--- a/crandall_guide_to_food/futher_reading.html
+++ b/crandall_guide_to_food/futher_reading.html
@@ -4,4 +4,6 @@
 <head>
 	<title>FURTHER READING: DATE NIGHT</title>
 </head>
+
+<h1> SOME SPECIAL SPOTS FOR YOU TO EXPLORE OUTSIDE THE 'HOOD'</h1>
 </body>
