--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -28,8 +28,8 @@
 		
 
 				<ul>
-					<a href= "american_fare.html" target="_blank">AMERICAN FARE</a>
-					<a href= "chinese.html" target="_blank"> CHINESE</a>
+					<li> <a href= "american_fare.html" target="_blank">AMERICAN FARE</a> </li>
+					<li><a href= "chinese.html" target="_blank"> CHINESE</a></li>
 				</ul>
 		</aside>
 	</div>
@@ -37,6 +37,7 @@
 
 	<div>
 		<article>
+
 		</article>
 	</div>
 
