--- a/crandall_guide_to_food/futher_reading.html
+++ b/crandall_guide_to_food/futher_reading.html
@@ -3,7 +3,7 @@
 <body>
 <head>
 	<title>FURTHER READING: DATE NIGHT</title>
-</head>
+</header>
 
 <h1> SOME SPECIAL SPOTS FOR YOU TO EXPLORE OUTSIDE THE 'HOOD'</h1>
 </body>
