--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -5,12 +5,47 @@
 	<title>FULL INDEX</title>
 </head>
 
-<h2> Culinary Tour Around The Globe</h2>
+<h1> Culinary Tour Around The Globe</h1>
 
-<h3> American Fare </h3>
+<h2> American Fare </h2>
+<div class="boxtype">
+</div>
 
-<h3> Chinese </h3>
 
+<h2> Chinese </h2>
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
+
+<h2> French </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
+
+
+<h2> Thai </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+
+</div>
 
 
 </body>
