--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -15,7 +15,7 @@
 			<a href= "full_list.html" target="_blank">Full Index</a>
 			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
 			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
-			<a href= "further_reading.html" target="_blank">Further Reading</a>
+			<a href= "date_night.html" target="_blank">Further Reading</a>
 		</nav>
 	</header>
 
