--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -3,6 +3,8 @@
 <body>
 <head>
 	<title>FULL INDEX</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
 <h1> Culinary Tour Around The Globe</h1>
