--- a/crandall_guide_to_food/date_night.html
+++ b/crandall_guide_to_food/date_night.html
@@ -3,6 +3,8 @@
 <body>
 <head>
 	<title>FURTHER READING: DATE NIGHT</title>
+	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 </header>
 
 <h1> SOME SPECIAL SPOTS FOR YOU TO EXPLORE OUTSIDE THE 'HOOD'</h1>
