--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -5,6 +5,7 @@
 <head>
 	<title>Crandall Guide To Eating Out</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
