--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -4,6 +4,7 @@
 <head>
 	<title>FULL INDEX</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
