--- a/crandall_guide_to_food/date_night.html
+++ b/crandall_guide_to_food/date_night.html
@@ -4,6 +4,7 @@
 <head>
 	<title>FURTHER READING: DATE NIGHT</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
+	<link rel="stylesheet" type="text/css" href="reset.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </header>
 
