--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -10,12 +10,27 @@
 
 <h1> Culinary Tour Around The Globe</h1>
 
-<h2> American Fare </h2>
+<h2> AMERICAN FARE </h2>
 <div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+	<hr class="style-four">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
 </div>
 
 
-<h2> Chinese </h2>
+<h2> CHINESE </h2>
 <div class="boxtype">
 	<h3> Joya </h3>
 		<ul>
@@ -26,7 +41,7 @@
 		</ul>
 </div>
 
-<h2> French </h2>	
+<h2> FRENCH </h2>	
 <div class="boxtype">
 	<h3> Joya </h3>
 		<ul>
@@ -37,8 +52,82 @@
 		</ul>
 </div>
 
+<h2> GREEK </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
 
-<h2> Thai </h2>	
+<h2> INDIAN </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
+
+<h2> JAPANESE </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
+
+<h2> KOREAN </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
+
+<h2> MIDDLE EASTERN </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
+
+<h2> MEXICAN </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+	<hr class="style-four">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+		
+</div>
+
+<h2> THAI </h2>	
 <div class="boxtype">
 	<h3> Joya </h3>
 		<ul>
@@ -50,5 +139,25 @@
 
 </div>
 
+<h2> MISC </h2>	
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
+	<hr class="style-four">
 
+<div class="boxtype">
+	<h3> Joya </h3>
+		<ul>
+			<li>WEBSITE</li>
+			<li>PHONE: </li>
+			<li>ADDRESS : </li>
+			<li>NOTES: </li>
+		</ul>
+</div>
 </body>
