--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -10,16 +10,15 @@
 </head>
 
 <body>
-	<header>
+	<div class="wrapper">
 		<h1> Crandall Guide To Eating Out</h1>
 		<nav>
-			<a href= "full_list.html" target="_blank">Full Index</a>
+			<a href= "full_list.html" target="_blank">Full Index</a>   
 			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
 			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
 			<a href= "date_night.html" target="_blank">Further Reading</a>
 		</nav>
-	</header>
-
+	</div>
 
 <section id="two_column_content" class="clearfix">
 	<div>
