--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -10,6 +10,14 @@
 
 <h1> Culinary Tour Around The Globe</h1>
 
+<nav>
+			<a href= "full_list.html" target="_blank">Full Index</a>   
+			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
+			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
+			<a href= "date_night.html" target="_blank">Further Reading</a>
+		</nav>
+	</div>
+	
 <h2> AMERICAN FARE </h2>
 <div class="boxtype">
 	<h3> Joya </h3>
