--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -23,8 +23,11 @@
 <section id="two_column_content" class="clearfix">
 	<div>
 		<aside>
-			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+			<p>Magia! Mangia! Ready to eat?  Nothing Fancy--just an organized guide to what you have READY at your finger tips from your local spots! 
 			</p>
+
+			<br>
+			
 		
 
 				<ul>
