--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <head>
-	<title>FULL INDEX</title>
+	<title>FULL LIST</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
@@ -11,7 +11,7 @@
 <h1> Culinary Tour Around The Globe</h1>
 
 <nav>
-			<a href= "full_list.html" target="_blank">Full Index</a>   
+			<a href= "full_list.html" target="_blank">Full List</a>   
 			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
 			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
 			<a href= "date_night.html" target="_blank">Further Reading</a>
