--- a/crandall_guide_to_food/index.html
+++ b/crandall_guide_to_food/index.html
@@ -13,7 +13,7 @@
 	<div class="wrapper">
 		<h1> Crandall Guide To Eating Out</h1>
 		<nav>
-			<a href= "full_list.html" target="_blank">Full Index</a>   
+			<a href= "full_list.html" target="_blank">Full List</a>   
 			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
 			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
 			<a href= "date_night.html" target="_blank">Further Reading</a>
