--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html!>
 <html>
-<body>
+
 <head>
 	<title>FULL LIST</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
@@ -8,14 +8,18 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 </head>
 
-<h1> Culinary Tour Around The Globe</h1>
+<body>
 
-<nav>
+	<div class="wrapper">
+		<h1> Crandall Guide To Eating Out</h1>
+		<nav>
 			<a href= "full_list.html" target="_blank">Full List</a>   
 			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
 			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
 			<a href= "date_night.html" target="_blank">Further Reading</a>
-</nav>
+		</nav>
+
+	</div>
 
 	
 <h2> AMERICAN FARE </h2>
