--- a/crandall_guide_to_food/date_night.html
+++ b/crandall_guide_to_food/date_night.html
@@ -1,12 +1,28 @@
 <!DOCTYPE html!>
 
-<body>
+<html>
+
 <head>
-	<title>FURTHER READING: DATE NIGHT</title>
+	<title>FULL LIST</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" type="text/css" href="reset.css">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-</header>
+</head>
 
-<h1> SOME SPECIAL SPOTS FOR YOU TO EXPLORE OUTSIDE THE 'HOOD'</h1>
+<body>
+
+	<div class="wrapper">
+		<h1> Crandall Guide To Eating Out</h1>
+		<nav>
+			<a href= "index.html" target="_blank">Home</a> 
+			<a href= "full_list.html" target="_blank">Full List</a>   
+			<a href= "https://www.seamless.com" target="_blank">Seamless</a>
+			<a href= "https://www.grubhub.com" target="_blank">Grubhub</a>
+			<a href= "date_night.html" target="_blank">Further Reading</a>
+		</nav>
+
+	</div>
+
+
+<h2> SOME SPECIAL SPOTS FOR YOU TO EXPLORE OUTSIDE THE 'HOOD'</h2>
 </body>
