--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -25,21 +25,27 @@
 	
 <h2> AMERICAN FARE </h2>
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3> Cafe Luluc </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE:  https://cafeluluc.com/menu/</li>
+			<li>PHONE: (718) 625-3815</li>
+			<li>ADDRESS: 214 Smith St, Brooklyn, NY 11201</li>
+			<li>NOTES: Take Out only</li>
 		</ul>
 	<hr class="style-four">
-	<h3> Joya </h3>
+	<h3> Kitchen </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: https://www.kitchenatcobblehill.com/#menus</li>
+			<li>PHONE: (347) 689-4279</li>
+			<li>ADDRESS: 254 Court St, Brooklyn, NY 11231</li>
+			<li>NOTES: Take Out, or Delivery via <a href= " ">GrubHub</a></li>
 		</ul>
+	<h3> Kittery </h3>
+		<ul>
+			<li>WEBSITE: http://www.kitterybrooklyn.net/menu </li>
+			<li>PHONE: (718) 643-3293</li>
+			<li>ADDRESS: 305 Smith St, Brooklyn, NY 11231</li>
+			<li>NOTES: Take Out only</li>
 </div>
 
 
