--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -27,19 +27,20 @@
 <div class="boxtype">
 	<h3> Cafe Luluc </h3>
 		<ul>
-			<li>WEBSITE:  https://cafeluluc.com/menu/</li>
+			<li>WEBSITE: <a href= "https://cafeluluc.com/menu/" target="wwww.cafeluluc"></li>
 			<li>PHONE: (718) 625-3815</li>
-			<li>ADDRESS: 214 Smith St, Brooklyn, NY 11201</li>
+			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Cafe+Luluc/@40.6845026,-73.9944018,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a50fea3e409:0x8f6e5a9ed6d95c88!8m2!3d40.6845026!4d-73.9922131" target="214 Smith St, Brooklyn, NY 11201"></li>
 			<li>NOTES: Take Out only</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Kitchen </h3>
 		<ul>
-			<li>WEBSITE: https://www.kitchenatcobblehill.com/#menus</li>
+			<li>WEBSITE: <a href= "https://www.kitchenatcobblehill.com/#menus" target="www.kitchenatcobblehill"></li>
 			<li>PHONE: (347) 689-4279</li>
-			<li>ADDRESS: 254 Court St, Brooklyn, NY 11231</li>
+			<li>ADDRESS: <a href= " " target="254 Court St, Brooklyn, NY 11231"></li>
 			<li>NOTES: Take Out, or Delivery via <a href= " ">GrubHub</a></li>
 		</ul>
+	<hr class="style-four">
 	<h3> Kittery </h3>
 		<ul>
 			<li>WEBSITE: http://www.kitterybrooklyn.net/menu </li>
