--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -27,17 +27,17 @@
 <div class="boxtype">
 	<h3> Cafe Luluc </h3>
 		<ul>
-			<li>WEBSITE: <a href= "https://cafeluluc.com/menu/" target="_blank">wwww.cafeluluc</li>
+			<li>WEBSITE: <a href= "https://cafeluluc.com/menu/" target="_blank">wwww.cafeluluc</a></li>
 			<li>PHONE: (718) 625-3815</li>
-			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Cafe+Luluc/@40.6845026,-73.9944018,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a50fea3e409:0x8f6e5a9ed6d95c88!8m2!3d40.6845026!4d-73.9922131" target="_blank">214 Smith St, Brooklyn, NY 11201</li>
+			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Cafe+Luluc/@40.6845026,-73.9944018,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a50fea3e409:0x8f6e5a9ed6d95c88!8m2!3d40.6845026!4d-73.9922131" target="_blank">214 Smith St, Brooklyn, NY 11201</a></li>
 			<li>NOTES: Take Out only</li>
 		</ul>
 	<hr class="style-four">
 	<h3> Kitchen </h3>
 		<ul>
-			<li>WEBSITE: <a href= "https://www.kitchenatcobblehill.com/#menus" target="_blank">www.kitchenatcobblehill</li>
+			<li>WEBSITE: <a href= "https://www.kitchenatcobblehill.com/#menus" target="_blank">www.kitchenatcobblehill</a></li>
 			<li>PHONE: (347) 689-4279</li>
-			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Kitchen+at+Cobble+Hill/@40.6853646,-73.9968795,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a507f2fb6e1:0x69da12a8a0f8529f!8m2!3d40.6853646!4d-73.9946908" target="_blank">254 Court St, Brooklyn, NY 11231</li>
+			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Kitchen+at+Cobble+Hill/@40.6853646,-73.9968795,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a507f2fb6e1:0x69da12a8a0f8529f!8m2!3d40.6853646!4d-73.9946908" target="_blank">254 Court St, Brooklyn, NY 11231</a></li>
 			<li>NOTES: Take Out, or Delivery via <a href= " ">GrubHub</a></li>
 		</ul>
 	<hr class="style-four">
