--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -43,9 +43,9 @@
 	<hr class="style-four">
 	<h3> Kittery </h3>
 		<ul>
-			<li>WEBSITE: http://www.kitterybrooklyn.net/menu </li>
+			<li>WEBSITE: <a href="http://www.kitterybrooklyn.net/menu" target="_blank">www.kitterybrooklyn.net</a> </li>
 			<li>PHONE: (718) 643-3293</li>
-			<li>ADDRESS: 305 Smith St, Brooklyn, NY 11231</li>
+			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Kittery/@40.681421,-73.9960787,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a574311c407:0xf286136e3caf2809!8m2!3d40.681417!4d-73.99389" target="_blank">305 Smith St, Brooklyn, NY 11231</a></li>
 			<li>NOTES: Take Out only</li>
 </div>
 
