--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -118,32 +118,42 @@
 
 <h2> MIDDLE EASTERN </h2>	
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3> Darna Falafel </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: <a href="https://darnafalafelbrooklynny.com/21335" target="_blank">wwww.darnafalafelbrooklnyny.com</a></li>
+			<li>PHONE: (347) 799-1673</li>
+			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Darna+Falafel/@40.6870525,-73.9959871,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5004ab22ef:0x9b6d024505efda01!8m2!3d40.6870485!4d-73.9937984" target="_blank">200 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out and Devliery via <a href= "https://www.seamless.com/menu/darna-falafel-200-court-st-brooklyn/264844" target="_blank">Seamless</a></li>
 		</ul>
 </div>
 
 <h2> MEXICAN </h2>	
 <div class="boxtype">
-	<h3> Joya </h3>
+		<h3> Fat Daddy Taco </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
+			<li>WEBSITE: <a href="https://menupages.com/fatty-daddy-taco/152-smith-st-brooklyn?utm_source=eat24hrs.com&utm_medium=grubhub-owned-delivery-properties&utm_campaign=growth_redirect-eat24whitelabel" target="_blank">fattydaddytaco.com</a></li>
+			<li>PHONE: (929) 295-9361</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Fatty+Daddy+Taco+Restaurant/@40.686601,-73.9930533,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51dbb1aa8d:0xa36c9dfd336e5b2!8m2!3d40.686597!4d-73.9908646" target="_blank">152 Smith St, Brooklyn, NY 11201</a></li>
 			<li>NOTES: </li>
 		</ul>
 	<hr class="style-four">
-	<h3> Joya </h3>
+		<h3> Jolie Cantina </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: <a href="https://www.joliecantina.com/menu" target="_blank">www.joliecantina.com></a></li>
+			<li>PHONE: (718) 488-0777</li>
+			<li>ADDRESS : <a href="https://www.google.com/maps/place/Jolie+Cantina/@40.6836079,-73.9946553,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a4ddc8c481d:0x655833cf197a4be4!8m2!3d40.6836039!4d-73.9924666" target="_blank">241 Smith St, Brooklyn, NY 11231</a></li>
+			<li>NOTES: Take Out Only</li>
 		</ul>
+	<hr class="style-four">
+		<h3> Lobo </h3>
+		<ul>
+			<li>WEBSITE: <a href="https://lobonyc.com/menus/" target="_blank">www.lobonyc.com</a></li>
+			<li>PHONE: (718) 858-7739</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lobo/@40.6865691,-73.996268,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5011fe45df:0xe3a190f16132ca6e!8m2!3d40.6865651!4d-73.9940793" target="_blank">218 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out only</li>
+		</ul>
+	
+	
 		
 </div>
 
