--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -129,12 +129,12 @@
 
 <h2> MEXICAN </h2>	
 <div class="boxtype">
-		<h3> Fat Daddy Taco </h3>
+		<h3> Fatty Daddy Taco </h3>
 		<ul>
 			<li>WEBSITE: <a href="https://menupages.com/fatty-daddy-taco/152-smith-st-brooklyn?utm_source=eat24hrs.com&utm_medium=grubhub-owned-delivery-properties&utm_campaign=growth_redirect-eat24whitelabel" target="_blank">fattydaddytaco.com</a></li>
 			<li>PHONE: (929) 295-9361</li>
 			<li>ADDRESS: <a href="https://www.google.com/maps/place/Fatty+Daddy+Taco+Restaurant/@40.686601,-73.9930533,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51dbb1aa8d:0xa36c9dfd336e5b2!8m2!3d40.686597!4d-73.9908646" target="_blank">152 Smith St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: </li>
+			<li>NOTES: Take Out, or delivery via <a href="https://www.seamless.com/menu/fatty-daddy-taco-152-smith-st-brooklyn/319294?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bfatty%20%2Bdaddy%20%2Btaco&efkwid=57776262490&gclid=EAIaIQobChMIk6zt3unO5gIVj5-fCh2DMgxQEAAYASAAEgK_fPD_BwE&gclsrc=aw.ds" target="_blank">Seamless</a></li>
 		</ul>
 	<hr class="style-four">
 		<h3> Jolie Cantina </h3>
@@ -161,12 +161,19 @@
 <div class="boxtype">
 	<h3> Joya </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: <a href="http://www.joyabrooklyn.com/" target="_blank">www.joyabrooklyn.com</a></li>
+			<li>PHONE: (718) 222-3484</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Joya/@40.6866705,-73.9957483,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5017a840af:0xc024f2952c17de0e!8m2!3d40.6866665!4d-73.9935596" target="_blank">215 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out and Delivery via <a href="https://www.seamless.com/menu/joya-215-court-st-brooklyn/583032" target="_blank">Seamless</a></li>
 		</ul>
-
+	<hr class="style-four">
+	<h3> Lemongrass Grill </h3>
+		<ul>
+			<li>WEBSITE: <a href="http://places.singleplatform.com/lemongrass-grill-5/menu?ref=google" target="_blank">Menu</a></li>
+			<li>PHONE: (718) 522-9728</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lemongrass+Grill/@40.6886677,-73.9952066,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a4fbf115b3f:0xe30c4141a2bcf80c!8m2!3d40.6886637!4d-73.9930179" target="_blank">156 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out, and delivery via <a href="https://www.seamless.com/menu/lemongrass-grill-156-court-st-brooklyn/736467" target="_blank">Seamless</a></li>
+		</ul>
 </div>
 
 <h2> MISC </h2>	
