--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -52,23 +52,31 @@
 
 <h2> CHINESE </h2>
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3> Han Dynasty </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: <a href="https://handynasty.net/brooklyn/menu/" target="_blank">www.handynasty.net/brooklyn</a>.com</a></li>
+			<li>PHONE: (718) 858-0588</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Han+Dynasty/@40.6911555,-73.9848016,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25bb4aa91dfeb:0x5c2b8a3793cc65f5!8m2!3d40.6911515!4d-73.9826129" target="_blank">1 Dekalb Ave Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/han-dynasty-1-dekalb-ave-brooklyn/916580?classicAffiliateId=%2Fr%2Fw%2F91514%2Frestaurant%2F916580" target="_blank">Grubhub</a></li>
+		</ul>
+	<hr class="style-four">
+	<h3> Lichee Nut </h3>
+		<ul>
+			<li>WEBSITE: <a href="https://www.licheenutny.com/menu/" target="_blank">www.licheenutny.com</a></li>
+			<li>PHONE: (718) 522-5565</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lichee+Nut/@40.6941945,-73.9949936,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a48f10b45f5:0xf31210a5eaec13ed!8m2!3d40.6941905!4d-73.9928049" target="_blank">162 Montague street, Brooklyn Hieghts</a></li>
+			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/lichee-nut-162-montague-st-brooklyn/293927?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BNew%2BYork%2C%2BNY%2B%7C%2BRestaurants%2B%7C%2BEXP%2B%7C%2BKeywordAdjustment%2B%7C%2BControl&utm_term=%2Blichee%20%2Bnut%20%2Bdelivery&efkwid=77821222519&gclid=EAIaIQobChMI1PnQhO7O5gIVjp-fCh3fAwlKEAAYASAAEgKtJvD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a></li>
 		</ul>
 </div>
 
 <h2> FRENCH </h2>	
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3> Lichee Nut </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: <a href="https://www.licheenutny.com/menu/" target="_blank">www.licheenutny.com</a></li>
+			<li>PHONE: (718) 522-5565</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lichee+Nut/@40.6941945,-73.9949936,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a48f10b45f5:0xf31210a5eaec13ed!8m2!3d40.6941905!4d-73.9928049" target="_blank">162 Montague street, Brooklyn Hieghts</a></li>
+			<li>NOTES: Take Out and Delivery via <a href="https://www.grubhub.com/restaurant/lichee-nut-162-montague-st-brooklyn/293927?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BNew%2BYork%2C%2BNY%2B%7C%2BRestaurants%2B%7C%2BEXP%2B%7C%2BKeywordAdjustment%2B%7C%2BControl&utm_term=%2Blichee%20%2Bnut%20%2Bdelivery&efkwid=77821222519&gclid=EAIaIQobChMI1PnQhO7O5gIVjp-fCh3fAwlKEAAYASAAEgKtJvD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a></li>
 		</ul>
 </div>
 
@@ -96,12 +104,12 @@
 
 <h2> JAPANESE </h2>	
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3> Osaka </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: <a href="https://www.osakany.com/menu" target="_blank">www.osakany.com/menu</a></li>
+			<li>PHONE: (929) 209-8297</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Osaka/@40.684819,-73.9970481,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5a7eb54e13:0x4fa646fc6042eb8e!8m2!3d40.684815!4d-73.9948594" target="_blank"> 272 Court St, Brooklyn, NY 11231</a></li>
+			<li>NOTES: Take Out of Delivery via <a href="https://www.osakany.com/order-online" target="_blank">Osaka website</a>, or <a href="https://www.seamless.com/menu/osaka-272-court-st-brooklyn/66769?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bosaka%20%2Bbrooklyn&efkwid=42437385985&gclid=EAIaIQobChMIn4uut-_O5gIVRcDICh0ruwm0EAAYASAAEgKP3vD_BwE&gclsrc=aw.ds" target="_blank">Seamless</a></li>
 		</ul>
 </div>
 
