--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -102,6 +102,32 @@
 		</ul>
 </div>
 
+<h2> ITALIAN </h2>	
+<div class="boxtype">
+	<h3> Caruso's </h3>
+		<ul>
+			<li>WEBSITE: <a href="https://slicelife.com/restaurants/ny/brooklyn/11201/caruso-s-pizza-restaurant/menu?segment_id=cff1010a-c0b9-4c66-8b1b-6cfd434a4043&utm_campaign=partner_websites" target="_blank"> Menu</a></li>
+			<li>PHONE: (718) 797-2300</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Caruso's/@40.6866315,-73.9930104,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51dc7449c1:0xd2f7e7338ca21c3c!8m2!3d40.6866275!4d-73.9908217" target="_blank">150 Smith St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out or Delivery via <a href="https://slicelife.com/restaurants/ny/brooklyn/11201/caruso-s-pizza-restaurant/menu?segment_id=cff1010a-c0b9-4c66-8b1b-6cfd434a4043&utm_campaign=partner_websites" target="_blank">Caruso's website</a> or <a href="https://www.seamless.com/menu/carusos-pizzeria--restaurant-150-smith-st-brooklyn/21578" target="_blank">Seamless</a></li>
+		</ul>
+	<hr class="style-four">
+	<h3> Claudine's</h3>
+		<ul>
+			<li>WEBSITE: <a href="https://www.claudinesmenu.com/" target="_blank">www.claudinesmenu.com</a></li>
+			<li>PHONE: (718) 624-2361</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Claudine's/@40.6813141,-73.9962004,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5767bfa667:0x585bf1ddcad55dd4!8m2!3d40.6813101!4d-73.9940117" target="_blank">214 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out or Delivery via <a href="https://slicelife.com/restaurants/ny/brooklyn/11231/claudine-s/menu?segment_id=d3639664-a4da-4d5c-8c51-f6fb077b0e9b&utm_campaign=partner_websites" target="_blank">their website</a> or <a href="https://www.seamless.com/menu/claudines-311-smith-st-brooklyn/288965" target="_blank">Seamless</a></li>
+		</ul><hr class="style-four">
+	<h3> Layla Jones</h3>
+		<ul>
+			<li>WEBSITE: <a href="http://laylajones.com/" target="_blank">www.laylajones.com</a></li>
+			<li>PHONE: (718) 624-2361</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Layla+Jones/@40.6866679,-73.9962347,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a500e325e67:0x5fb35a89ad902b58!8m2!3d40.6866639!4d-73.994046" target="_blank">214 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out or Delivery via <a href="https://www.seamless.com/menu/layla-jones-214-court-st-brooklyn/66857" target="_blank">Seamless</a></li>
+		</ul>
+</div>
+
 <h2> JAPANESE </h2>	
 <div class="boxtype">
 	<h3> Osaka </h3>
