--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -93,12 +93,12 @@
 
 <h2> INDIAN </h2>	
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3> Indian Table </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
-			<li>NOTES: </li>
+			<li>WEBSITE: <a href="http://indiantableny.com/" target="_blank">www.indiantableny.com</a></li>
+			<li>PHONE: (347) 689-3882</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Indian+Table/@40.6860256,-73.9965937,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a50740914a3:0x1cd65906c243315c!8m2!3d40.6860216!4d-73.994405" target="_blank">234 Court St, Brooklyn, New York, 11201</a></li>
+			<li>NOTES: Take Out or delivery via <a href="https://www.seamless.com/menu/indian-table---bk-11201-234-court-st-brooklyn/416290" target="_blank">Seamless</a></li>
 		</ul>
 </div>
 
