--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -25,6 +25,14 @@
 	
 <h2> AMERICAN FARE </h2>
 <div class="boxtype">
+	<h3> Bareburger </h3>
+		<ul>
+			<li>WEBSITE: <a href= "https://www.bareburger.com/menu/" target="_blank">wwww.bareburger.com</a></li>
+			<li>PHONE: (347) 529-6673</li>
+			<li>ADDRESS: <a href= "https://www.google.com/maps/place/Bareburger/@40.6860895,-74.0294246,13z/data=!4m8!1m2!2m1!1sbareburger!3m4!1s0x0:0x9523879e95e6f569!8m2!3d40.6891968!4d-73.9923835" target="_blank">149 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out and delivery available via<a href="https://www.grubhub.com/restaurant/bareburger---cobble-hill-149-court-st-brooklyn/296511?utm_source=google_ppa&utm_medium=cpc&utm_campaign=National%20%7C%20All%20%7C%20PPA%20%7C%2008&utm_content=296511&chiri_offerPromoOneLiner=6ClUAlSjVkWxuRTA694RfS&chiri_offerPromo=21U71uQgnUk02K0ngHeT1u&chiri_restaurant-banner=73p1gnAGdnh5By9F9LyO9J&blockNavi=true&gclid=EAIaIQobChMIwcD7lo7R5gIVCbSzCh3tHQIpEBIYASAAEgK_oPD_BwE&gclsrc=aw.ds" target="_blank">Grubhub</a></li>
+		</ul>
+	<hr class="style-four">
 	<h3> Cafe Luluc </h3>
 		<ul>
 			<li>WEBSITE: <a href= "https://cafeluluc.com/menu/" target="_blank">wwww.cafeluluc</a></li>
@@ -141,15 +149,31 @@
 
 <h2> KOREAN </h2>	
 <div class="boxtype">
-	<h3> Joya </h3>
+	<h3> Ssam Korean Bistro </h3>
 		<ul>
-			<li>WEBSITE</li>
-			<li>PHONE: </li>
-			<li>ADDRESS : </li>
+			<li>WEBSITE: <a href="http://www.ssamkoreanbistro.com/" target="_blank">www.ssamkoreanbistro.com</a></li>
+			<li>PHONE: (917) 909-1248</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Ssam+Korean+Bistro/@40.685937,-73.9934587,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51c9956e1b:0x8303b71dff2b97c0!8m2!3d40.685933!4d-73.99127" target="_blank">170 Smith Street, Brooklyn, NY 11201</a></li>
 			<li>NOTES: </li>
 		</ul>
 </div>
-
+<h2> LATIN AMERICAN</h2>	
+<div class="boxtype">
+		<h3> El Nuevo Cibao </h3>
+		<ul>
+			<li>WEBSITE: <a href="https://menupages.com/fatty-daddy-taco/152-smith-st-brooklyn?utm_source=eat24hrs.com&utm_medium=grubhub-owned-delivery-properties&utm_campaign=growth_redirect-eat24whitelabel" target="_blank">fattydaddytaco.com</a></li>
+			<li>PHONE: (201) 482-7682/li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/El+Nuevo+Cibao/@40.685852,-73.993394,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a51c820682d:0x5ed8970399c71d83!8m2!3d40.685848!4d-73.9912053" target="_blank">172 Smith St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out, or delivery via <a href="https://www.seamless.com/menu/cibao-latin-cuisine-172-smith-st-brooklyn/279092?utm_source=google&utm_medium=organic&utm_campaign=place-action-link" target="_blank">Seamless</a></li>
+		</ul>
+	<hr class="style-four">
+		<h3> Libertador </h3>
+		<ul>
+			<li>WEBSITE: <a href="http://libertadornyc.com/Brooklyn" target="_blank">www.libertadornyc.com/brooklyn</a></li>
+			<li>PHONE: (347) 689-3122</li>
+			<li>ADDRESS : <a href="https://www.google.com/maps/place/Libertador/@40.687334,-74.0003647,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a5b2f9c72a9:0xc7b94417eb22a5b!8m2!3d40.68733!4d-73.998176" target="_blank">404 Henry St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out Only</li>
+		</ul>
 <h2> MIDDLE EASTERN </h2>	
 <div class="boxtype">
 	<h3> Darna Falafel </h3>
@@ -187,8 +211,6 @@
 			<li>NOTES: Take Out only</li>
 		</ul>
 	
-	
-		
 </div>
 
 <h2> THAI </h2>	
