--- a/crandall_guide_to_food/full_list.html
+++ b/crandall_guide_to_food/full_list.html
@@ -223,12 +223,12 @@
 			<li>NOTES: Take Out and Delivery via <a href="https://www.seamless.com/menu/joya-215-court-st-brooklyn/583032" target="_blank">Seamless</a></li>
 		</ul>
 	<hr class="style-four">
-	<h3> Lemongrass Grill </h3>
+	<h3> Cafe Chili </h3>
 		<ul>
 			<li>WEBSITE: <a href="http://places.singleplatform.com/lemongrass-grill-5/menu?ref=google" target="_blank">Menu</a></li>
-			<li>PHONE: (718) 522-9728</li>
-			<li>ADDRESS: <a href="https://www.google.com/maps/place/Lemongrass+Grill/@40.6886677,-73.9952066,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a4fbf115b3f:0xe30c4141a2bcf80c!8m2!3d40.6886637!4d-73.9930179" target="_blank">156 Court St, Brooklyn, NY 11201</a></li>
-			<li>NOTES: Take Out, and delivery via <a href="https://www.seamless.com/menu/lemongrass-grill-156-court-st-brooklyn/736467" target="_blank">Seamless</a></li>
+			<li>PHONE: (718) 260-0066</li>
+			<li>ADDRESS: <a href="https://www.google.com/maps/place/Cafe+Chili/@40.688008,-73.9955797,17z/data=!3m1!4b1!4m5!3m4!1s0x89c25a4fe807045d:0xe697458b8894a5bd!8m2!3d40.688004!4d-73.993391" target="_blank">172 Court St, Brooklyn, NY 11201</a></li>
+			<li>NOTES: Take Out, and delivery via <a href="https://www.seamless.com/menu/cafe-chili-thai-cuisine-172-court-st-brooklyn/66956?utm_source=google&utm_medium=cpc&utm_campaign=New%2BYork%2C%2BNY%2B%7C%2BBrooklyn%2C%2BNY%2B%7C%2BRestaurants&utm_term=%2Bcafe%20%2Bchili&efkwid=25769846065&gclid=EAIaIQobChMI0Iy83qnR5gIVhZOzCh2W0A9uEAAYASAAEgLPr_D_BwE&gclsrc=aw.ds" target="_blank">Seamless</a></li>
 		</ul>
 </div>
 
